--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/amazon-bedrock": "^3.0.41",
+    "@ai-sdk/react": "^2.0.75",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@reduxjs/toolkit": "^2.9.0",
@@ -22,7 +24,8 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "simli-client": "^1.2.15",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
